--- a/ProniaMVC/ProniaMVC/Areas/Admin/Views/Category/Index.cshtml
+++ b/ProniaMVC/ProniaMVC/Areas/Admin/Views/Category/Index.cshtml
@@ -47,8 +47,8 @@
                                        <p>@category.Products.Count</p>
                                     </td>
                                     <td>
-                                        <a class="btn btn-warning btn-info"> <i class="mdi mdi-grease-pencil"></i> </a>
-                                        <a class="btn btn-danger btn-info"> <i class="mdi mdi-delete"></i></a>
+                                        <a asp-action="update" asp-route-id="@category.Id" class="btn btn-warning btn-info"> <i class="mdi mdi-grease-pencil"></i> </a>
+                                        <a asp-action="delete" asp-route-id="@category.Id" class="btn btn-danger btn-info"> <i class="mdi mdi-delete"></i></a>
                                         <a class="btn btn-primary"><i class="mdi mdi-information"></i></a>
                                     </td>
                                     
