--- a/ProniaMVC/ProniaMVC/Areas/Admin/Views/_ViewImports.cshtml
+++ b/ProniaMVC/ProniaMVC/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,5 +1,5 @@
 ﻿@using ProniaMVC.Models
 @using ProniaMVC.ViewModels
-
+@using ProniaMVC.Areas.Admin.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, AuthoringTagHelpers
