--- a/ProniaMVC/ProniaMVC/Areas/Admin/Views/Category/Index.cshtml
+++ b/ProniaMVC/ProniaMVC/Areas/Admin/Views/Category/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<Category>
+﻿@model List<GetCategoryAdminVM>
 
 
 @{
@@ -33,7 +33,7 @@
                         </tr>
                       </thead>
                       <tbody>
-                       @foreach (Category category in Model)
+                       @foreach (GetCategoryAdminVM categoryVM in Model)
                             {
                                 count++;
                                 <tr>
@@ -41,14 +41,14 @@
                                       @count
                                     </td>
                                     <td>
-                                        <p> @category.Name</p>
+                                        <p> @categoryVM.Name</p>
                                     </td>
                                     <td>
-                                       <p>@category.Products.Count</p>
+                                       <p>@categoryVM.ProductCount</p>
                                     </td>
                                     <td>
-                                        <a asp-action="update" asp-route-id="@category.Id" class="btn btn-warning btn-info"> <i class="mdi mdi-grease-pencil"></i> </a>
-                                        <a asp-action="delete" asp-route-id="@category.Id" class="btn btn-danger btn-info"> <i class="mdi mdi-delete"></i></a>
+                                        <a asp-action="update" asp-route-id="@categoryVM.Id" class="btn btn-warning btn-info"> <i class="mdi mdi-grease-pencil"></i> </a>
+                                        <a asp-action="delete" asp-route-id="@categoryVM.Id" class="btn btn-danger btn-info"> <i class="mdi mdi-delete"></i></a>
                                         <a class="btn btn-primary"><i class="mdi mdi-information"></i></a>
                                     </td>
                                     
