--- a/ProniaMVC/ProniaMVC/Areas/Admin/Views/Product/Update.cshtml
+++ b/ProniaMVC/ProniaMVC/Areas/Admin/Views/Product/Update.cshtml
@@ -1,5 +1,8 @@
 ﻿@model UpdateProductVM
-
+@{
+    ProductImage main = Model.ProductImages.FirstOrDefault(pi => pi.IsPrimary == true);
+    ProductImage hover = Model.ProductImages.FirstOrDefault(pi => pi.IsPrimary == false);
+}
 <div class="row">
     <div class="col-12 grid-margin stretch-card">
         <div class="card">
@@ -7,6 +10,40 @@
                 <h4 class="card-title">Update Product</h4>
 
                 <form class="forms-sample" method="post" enctype="multipart/form-data">
+                    <div class="form-group">
+                        <img style="width:150px;height:150px;" src="~/assets/images/website-images/@main?.Image" />
+                        <br>
+                        <label asp-for="MainPhoto">Main Image</label>
+                        <input asp-for="MainPhoto" class="form-control" accept="image/*">
+                        <span asp-validation-for="MainPhoto" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <img style="width:150px;height:150px;" src="~/assets/images/website-images/@hover?.Image" />
+                        <br>
+                        <label asp-for="HoverPhoto">Secondary Image</label>
+                        <input asp-for="HoverPhoto" class="form-control" accept="image/*">
+                        <span asp-validation-for="HoverPhoto" class="text-danger"></span>
+                    </div>
+                    <div class="form-group d-flex">
+                        
+                          
+                            @foreach (ProductImage addImage in Model.ProductImages.Where(pi => pi.IsPrimary == null).ToList())
+                            {
+                               <div class="position-relative">
+                                <img style="width:150px;height:150px;" src="~/assets/images/website-images/@addImage.Image" />
+                                <button style="top:5px;right:5px;" type="button" class="cus-delete btn btn-danger position-absolute">X</button>
+                                <input asp-for="ImageIds" value="@addImage.Id" type="hidden" class="form-control">
+                               </div>
+
+                            }
+                        
+                    </div>
+                    <div class="form-group">
+                        
+                        <label asp-for="AdditionalPhotos">Additional Images</label>
+                        <input asp-for="AdditionalPhotos" class="form-control" accept="image/*">
+                        <span asp-validation-for="AdditionalPhotos" class="text-danger"></span>
+                    </div>
                     <div class="form-group">
                         <label asp-for="Name">Name</label>
                         <input asp-for="Name" class="form-control" placeholder="Name" accept="image/*">
@@ -48,3 +85,19 @@
         </div>
     </div>
 </div>
+
+@section DeleteButtons{
+    <script>
+
+        var btns = document.querySelectorAll(".cus-delete");
+
+        for (let i = 0; i < btns.length; i++) {
+            btns[i].addEventListener("click", function () {
+
+                btns[i].parentElement.remove();
+            })
+        }
+
+    </script>
+}
+
